tests/rosetta/out/Rust/averages-median-2.error
rustc: exit status 1
error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/averages-median-2.rs:23:61
   |
23 |         let half = ((arr.len() as i32 as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                             ^^^^^ method not found in `f64`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
